# Mantis

./: CMakeLists.txt  Mantis.cpp  Mantis.h  Mantis.ino  README.md  Terrarium.cpp  Terrarium.h  config-gamebuino.h
assets/: bg_test.h  rgb565.h
ingore_this/: test_run_class.cpp  test_run_class.h
